force-app/main/default/objects/Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Administrative_Function__c</fullName>
        <description>PS_Person_Checklst.Admin_Function</description>
        <label>Administrative Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADMA</fullName>
                </value>
                <value>
                    <fullName>GEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>PS_ADM_MC_VW.ADAM_APPL_NBR</description>
        <label>Application Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Code__c</fullName>
        <description>PS_Person_Checklst.Checklist_CD</description>
        <label>Checklist Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GRADMT</fullName>
                </value>
                <value>
                    <fullName>GRAPPL</fullName>
                </value>
                <value>
                    <fullName>GRDEPT</fullName>
                </value>
                <value>
                    <fullName>SRGEN</fullName>
                </value>
                <value>
                    <fullName>UGADMT</fullName>
                </value>
                <value>
                    <fullName>UGAPPL</fullName>
                </value>
                <value>
                    <fullName>UGSUPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Item_Code__c</fullName>
        <description>PS_Person_CHK_ITEM.Chklst_item_CD</description>
        <label>Checklist Item Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Item_Status_Date__c</fullName>
        <description>PS_Person_CHK_ITEM.Status_DT</description>
        <label>Checklist Item Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checklist_Item_Status__c</fullName>
        <description>PS_Person_CHK_ITEM.Item_Status</description>
        <label>Checklist Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Paid Off</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <description>PS_Person_Checklst.Checklist_Status</description>
        <label>Checklist Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>PS_SCC_CKLSITM_TBL.Descr</description>
        <inlineHelpText>PS_SCC_CKLSITM_TBL.Descr</inlineHelpText>
        <label>Item Description</label>
        <length>81</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Short_Description__c</fullName>
        <description>PS_SCC_CKLSITM_TBL.Short Descr</description>
        <label>Item Short Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record populated by returning the Record Id based on the Application Number</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>PS_Person_Checklst.common_ID</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Application_Number__c</columns>
        <columns>Checklist_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>